--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,13 +14,12 @@
         <products-list></products-list>
     </ng-template>
     <ng-template #defaultContent>
-        <p>Hello Customer!</p>
+        <customer-home-page></customer-home-page>
         <!-- Add content common to customers here -->
     </ng-template>
     <ng-template #managerContent>
         <h1>Welcome to the Manager's Dashboard</h1>
         <products-list></products-list>
         <admins-table></admins-table>
-        <!-- Add content common to manager here -->
     </ng-template>
 </div>
