--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,6 @@ html, body {
   height: 100%; 
   margin: 0; 
   padding: 0;
-  background-color: #C2D9FF;
+  background-color: #F9F5EB;
 }
 body { font-family: Roboto, "Helvetica Neue", sans-serif; }
