--- a/src/app/components/Forms/product-form/product-form.component.html
+++ b/src/app/components/Forms/product-form/product-form.component.html
@@ -1,6 +1,9 @@
 <div class="container">
-    <h2>Add New Product</h2>
+    <h2>{{ isEditing ? 'Edit Product' : 'Add New Product' }}</h2>
     <form [formGroup]="productForm" (ngSubmit)="submitProduct()">
+        <!-- For editing, include a hidden input to capture the product ID -->
+        <input *ngIf="isEditing" type="hidden" formControlName="id">
+
         <div class="form-group">
             <label for="name">Product Name:</label>
             <input type="text" id="name" formControlName="name" class="form-control" required>
@@ -8,6 +11,10 @@
         <div class="form-group">
             <label for="description">Description:</label>
             <input type="text" id="description" formControlName="description" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="imageUrl">Product Image URL:</label>
+            <input type="text" id="imageUrl" formControlName="imageUrl" class="form-control" required>
         </div>
         <div class="form-group">
             <label for="category">Category:</label>
@@ -22,6 +29,8 @@
             <input type="number" id="quantity" formControlName="quantity" class="form-control">
         </div>
         
-        <button type="submit" class="btn btn-primary">Add Product</button>
+        <button type="submit" class="btn btn-primary">
+            {{ isEditing ? 'Update Product' : 'Add Product' }}
+        </button>
     </form>
 </div>
