--- a/src/app/components/customer-home-page/customer-home-page.component.html
+++ b/src/app/components/customer-home-page/customer-home-page.component.html
@@ -1,11 +1,17 @@
+<div class="cover-photo">
+    <h2 class="sale-heading">SALE UP TO 50% OFF!!</h2>
+</div>
+<div class="search-div">
+    <input type="text" class="search-bar" placeholder="Search Here..." [(ngModel)]="searchText" (input)="onSearch()">
+</div>
 <div class="products-container">
-    <ng-container *ngFor="let product of products">
+    <ng-container *ngFor="let product of filteredProducts">
         <mat-card class="product-card">
             <div class="product-image">
                 <img class="product-image" [src]="product.imageUrl" alt="{{ product.name }}" mat-card-image>
             </div>
             <mat-card-content>
-                <button class="add-to-cart">
+                <button class="add-to-cart" (click)="addToCart(product)">
                     <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg{fill:#EA5455}</style><path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96zM252 160c0 11 9 20 20 20h44v44c0 11 9 20 20 20s20-9 20-20V180h44c11 0 20-9 20-20s-9-20-20-20H356V96c0-11-9-20-20-20s-20 9-20 20v44H272c-11 0-20 9-20 20z"/></svg>
                 </button>
                 <div class="product-details">
@@ -13,6 +19,7 @@
                     <p class="product-desc">{{ product.description }}</p>
                     <p class="product-category">{{ product.category }}</p>
                     <p class="product-price"><span>EGP </span>{{ product.price }}</p>
+                    <p class="product-availability" *ngIf="product.quantity===0">Out of Stock</p>
                 </div>
             </mat-card-content>
         </mat-card>
