--- a/src/app/components/customer-home-page/customer-home-page.component.scss
+++ b/src/app/components/customer-home-page/customer-home-page.component.scss
@@ -1,3 +1,33 @@
+.cover-photo{
+    height: 300px; 
+    background-image: url('https://mybayutcdn.bayut.com/mybayut/wp-content/uploads/Supermarkets-in-DIP-Cover-29-07.jpg'); /* Set the path to your cover image */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #F9F5EB;
+    font-size: 24px; 
+
+    .sale-heading{
+        background-color: #EA5455; 
+        padding: 2px;
+    }
+}
+.search-div{
+    text-align: center;
+    margin-top: 30px;
+    .search-bar{
+        padding: 5px;
+        width: 300px;
+        border: 2px solid #ea5455;
+        border-radius: 20px;
+    }
+}
+
 .products-container {
     display: flex;
     flex-wrap: wrap;
@@ -5,7 +35,7 @@
     margin: 30px;
 
     .product-card {
-        width: 260px; /* Adjust to create 4 cards per row */
+        width: 260px; 
         margin: 5px;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         background-color: #E4DCCF;
@@ -37,6 +67,11 @@
     .product-price{
         color:#002B5B;
         font-size: 22px;
+    }
+    .product-availability{
+        color: #EA5455;
+        text-align: center;
+        margin-top: -20px;
     }
     .add-to-cart{
         font-size: 24px;
