All works except checkout

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,3 +41,7 @@ html, body {
   background-color: #F9F5EB;
 }
 body { font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.tooltip-class{
+  font-size: x-small;
+}
