--- a/src/app/components/admins-table/admins-table.component.html
+++ b/src/app/components/admins-table/admins-table.component.html
@@ -1,35 +1,56 @@
 <div class="container">
-    <h2>Admins List</h2>
-    <button mat-raised-button class="newAdmin-btn" routerLink="/admins/add">Add New Admin</button>
-    <table mat-table [dataSource]="admins">
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let admin"> {{ admin.firstName }} {{ admin.lastName }}</td>
-        </ng-container>
-    
-        <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef> Email </th>
-            <td mat-cell *matCellDef="let admin"> {{ admin.email }} </td>
-        </ng-container>
+  <h2>Admins List</h2>
+  <!-- <button mat-raised-button class="newAdmin-btn" routerLink="/admins/add">
+    Add New Admin
+  </button> -->
+  <table mat-table [dataSource]="admins">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let admin">
+        {{ admin.firstName }} {{ admin.lastName }}
+      </td>
+    </ng-container>
 
-        <ng-container matColumnDef="role">
-            <th mat-header-cell *matHeaderCellDef> Role </th>
-            <td mat-cell *matCellDef="let admin"> {{ admin.role }} </td>
-        </ng-container>
-    
-        <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Actions </th>
-            <td mat-cell *matCellDef="let admin">
-            <button mat-icon-button [routerLink]="['/admins/edit', admin.id]">
-                <mat-icon class="edit-icon">edit</mat-icon>
-            </button>
-            <button mat-icon-button (click)="deleteAdmin(admin.id)">
-                <mat-icon class="delete-icon">delete</mat-icon>
-            </button>
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <td mat-cell *matCellDef="let admin">{{ admin.email }}</td>
+    </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <ng-container matColumnDef="role">
+      <th mat-header-cell *matHeaderCellDef>Role</th>
+      <td mat-cell *matCellDef="let admin">{{ admin.role }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let admin">
+        <button
+          mat-icon-button
+          matTooltip="Promote to Admin"
+          matTooltipClass="tooltip-class"
+          matTooltipPosition="above"
+          *ngIf="admin.role === 'CUSTOMER'"
+          (click)="promoteUser(admin.email)"
+        >
+          <mat-icon class="add-icon">add</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          *ngIf="admin.role === 'ADMIN'"
+          matTooltip="Demote to Customer"
+          matTooltipPosition="above"
+          matTooltipClass="tooltip-class"
+          (click)="demoteAdmin(admin.email)"
+        >
+          <mat-icon class="remove-icon">remove</mat-icon>
+        </button>
+        <button mat-icon-button (click)="deleteAdmin(admin.email)">
+          <mat-icon class="delete-icon">delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 </div>
