Changes to admin form & table, cart, and cleanup ### Admin Tabe & Form Changes - Implemented add-admin form - Removed promote/demote functionality - Admin list (table) only fetches & shows admin (no promote) ### Cart Changes - Fixed `cartItemCount` of the the main cart icon - Cart now checks quantity before adding (not finished, has some issues)

--- a/src/app/components/customer-home-page/customer-home-page.component.html
+++ b/src/app/components/customer-home-page/customer-home-page.component.html
@@ -19,7 +19,8 @@
                     <p class="product-desc">{{ product.description }}</p>
                     <p class="product-category">{{ product.category }}</p>
                     <p class="product-price"><span>EGP </span>{{ product.price }}</p>
-                    <p class="product-availability" *ngIf="product.quantity===0">Out of Stock</p>
+                    <!-- TODO: fix this -->
+                    <!-- <p class="product-availability" *ngIf="product.quantity===0">Out of Stock</p> -->
                 </div>
             </mat-card-content>
         </mat-card>
