--- a/src/app/components/admins-table/admins-table.component.html
+++ b/src/app/components/admins-table/admins-table.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <h2>Admins List</h2>
-  <!-- <button mat-raised-button class="newAdmin-btn" routerLink="/admins/add">
+  <button mat-raised-button class="newAdmin-btn" routerLink="/admins/add">
     Add New Admin
-  </button> -->
+  </button>
   <table mat-table [dataSource]="admins">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
@@ -24,26 +24,6 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let admin">
-        <button
-          mat-icon-button
-          matTooltip="Promote to Admin"
-          matTooltipClass="tooltip-class"
-          matTooltipPosition="above"
-          *ngIf="admin.role === 'CUSTOMER'"
-          (click)="promoteUser(admin.email)"
-        >
-          <mat-icon class="add-icon">add</mat-icon>
-        </button>
-        <button
-          mat-icon-button
-          *ngIf="admin.role === 'ADMIN'"
-          matTooltip="Demote to Customer"
-          matTooltipPosition="above"
-          matTooltipClass="tooltip-class"
-          (click)="demoteAdmin(admin.email)"
-        >
-          <mat-icon class="remove-icon">remove</mat-icon>
-        </button>
         <button mat-icon-button (click)="deleteAdmin(admin.email)">
           <mat-icon class="delete-icon">delete</mat-icon>
         </button>
