Category finally *kinda* working

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,6 +21,7 @@
     <ng-template #managerContent>
         <h1>Welcome to the Manager's Dashboard</h1>
         <products-list></products-list>
+        <categories-list></categories-list>
         <admins-table></admins-table>
     </ng-template>
 </div>
