Orders' functionalities done

--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -24,5 +24,5 @@
     </div>
 
     <button class="clearCart-button" (click)="clearCart()">Clear Cart</button>
-    <button class="checkout-button" (click)="goToCheckout()">Proceed to Checkout</button>
+    <button class="checkout-button" (click)="submitOrder(cartItems)">Place Order</button>
 </div>  
