--- a/src/app/components/customer-home-page/customer-home-page.component.html
+++ b/src/app/components/customer-home-page/customer-home-page.component.html
@@ -20,7 +20,7 @@
                     <p class="product-category">{{ product.category }}</p>
                     <p class="product-price"><span>EGP </span>{{ product.price }}</p>
                     <!-- TODO: fix this -->
-                    <!-- <p class="product-availability" *ngIf="product.quantity===0">Out of Stock</p> -->
+                    <p class="product-availability" *ngIf="product.quantity===0">Out of Stock</p>
                 </div>
             </mat-card-content>
         </mat-card>
